Sharpen triads canvas, fixed alignment

--- a/app/css/triad-frets.css
+++ b/app/css/triad-frets.css
@@ -1,8 +1,8 @@
 .triad-canvas {
   display: none;
-  width: 300px;
-  height: 200px;
-  padding: 40px;
+  width: 280px;
+  height: 160px;
+  padding: 30px;
 
   border: 10px solid #f9f9f9;
 }
